# mintAndTransferTkn_Anchor

./: Anchor.toml  package-lock.json  package.json
programs/token_mintandsend/: Cargo.toml
programs/token_mintandsend/src/: lib.rs
tests/: token_mintandsend.ts
